Updated v4.3 with run B

--- a/.copilot_agreements.md
+++ b/.copilot_agreements.md
@@ -5,10 +5,14 @@
 - The API key is in the venv environment
 
 ## Experiment Execution
-- All experiment runs in background terminals (`isBackground: true`)
-- Each run gets its own dedicated terminal
-- Check progress using `get_terminal_output` on that terminal's ID
-- NEVER run commands that could interfere with running experiments
+- LLM runs take 30-40 minutes per seed — **always use `isBackground: true`**
+  - This returns control immediately so I can respond to you and check progress
+  - Using `isBackground: false` would block the conversation until the run completes
+- Each seed gets its own dedicated terminal (visible in VS Code)
+- After launching: say only "Running in background" with terminal ID — no commentary
+- Check progress using `get_terminal_output` when user signals
+- For multi-seed runs: launch all 5 seeds in parallel (each in own terminal)
+- Run `--preflight-only` first (foreground OK, it's fast) before full runs
 
 ## Monitoring Protocol
 - User monitors progress, tells me when to check
