Updated v4.4 with testing

--- a/.copilot_agreements.md
+++ b/.copilot_agreements.md
@@ -24,6 +24,18 @@
 - All 5 preregistered seeds (42, 123, 456, 789, 1000) must pass
 - Only proceed to LLM runs after user approval
 
+## Test Coverage Before LLM Runs
+- **Never spend real money on LLM runs until highly confident code won't hit programming bugs**
+- All new code paths must have unit tests before launching expensive runs
+- If a run fails due to AttributeError/TypeError/etc., add a regression test that would have caught it
+- Run full test suite (`pytest src/rsa_poc/v440/tests/`) and confirm all pass before launching
+- **After code changes, verify the fix is loaded** — Python caches imports; old terminals use old code
+
+## LLM Run Protocol
+- Always run 1 seed first (seed 42)
+- Update the report with results from first seed
+- Get user approval before launching remaining 4 seeds
+
 ## Preregistered Seeds
 - 42, 123, 456, 789, 1000 (N=5 for statistical validity)
 
