--- a/.copilot_agreements.md
+++ b/.copilot_agreements.md
@@ -8,11 +8,24 @@
 - LLM runs take 30-40 minutes per seed — **always use `isBackground: true`**
   - This returns control immediately so I can respond to you and check progress
   - Using `isBackground: false` would block the conversation until the run completes
+- **CRITICAL: Always use unbuffered output** so progress is visible:
+  ```bash
+  python -u -m src.rsa_poc.v440.run_llm_baseline ...
+  ```
+  Never use plain `python` — output will be buffered and invisible to both of us.
 - Each seed gets its own dedicated terminal (visible in VS Code)
 - After launching: say only "Running in background" with terminal ID — no commentary
+- **VERIFY OUTPUT IS FLOWING** — after launching, check `get_terminal_output` within 30 seconds to confirm the run is producing visible progress. If output is empty or just shows the command, STOP and fix before proceeding.
 - Check progress using `get_terminal_output` when user signals
-- For multi-seed runs: launch all 5 seeds in parallel (each in own terminal)
 - Run `--preflight-only` first (foreground OK, it's fast) before full runs
+
+## Multi-Seed Run Protocol (STRICT)
+- **NEVER launch multiple seeds in parallel without explicit user approval**
+- Always run seed 42 first, ALONE
+- Wait for seed 42 to COMPLETE with visible results
+- Update the report with seed 42 results
+- Get explicit user approval ("proceed with remaining seeds") before launching 123, 456, 789, 1000
+- Only after approval: launch remaining seeds (can be parallel)
 
 ## Monitoring Protocol
 - User monitors progress, tells me when to check
